syntax = "proto3";
package protocol;


message VoteRequest {
    uint64 term=1;
    string candidate=2;
}


message VoteResponse  {
    uint64 term=1;
    bool   granted=2;
}


message HeartbeatRequest {
    uint64 term=1;
    string leader=2;
    repeated string peers=3;
}


message Response{}

service raft {
    rpc SendVoteRequest(VoteRequest) returns (Response){};
    rpc SendVoteResponse(VoteResponse) returns(Response){};
    rpc Heartbeat(HeartbeatRequest) returns (Response){};
}


